# yastr

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: packaging.yml  python-package.yml
doc/guide/: advanced.md  quickstart.md
pkg/pyinstaller/: runner.py  yastr.spec
src/yastr/: __init__.py  config.py  errors.py  fixtures.py  plugin.py  utils.py
src/yastr/api/: fixtures.py
tests/: test_driver.py  test_fixtures.py  test_integ.py  test_json.py  test_markers.py  test_run.py  test_simple.py  test_yaml.py
tests/config/: test_json.py
