[tool.poetry]
name = "yastr"
version = "0.1.0"
description = "Yet another simple test runner"
authors = ["Your Name <you@example.com>"]
license = "MIT"
packages = [
    { include = "yastr", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"

anyconfig = {extras = ["template", "yaml"], version = "^0.13.0"}
marshmallow-dataclass = {extras = ["union"], version = "^8.5.3"}
pytest = "^7.1.1"

[tool.poetry.dev-dependencies]
yapf = "^0.32.0"
toml = "^0.10.2"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
yastr = "yastr:main"

[tool.yapf]
based_on_style = "pep8"
column_limit = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
