[tool.poetry]
name = "yastr"
version = "0.1.0"
description = "Yet another simple test runner"
authors = ["Christoph Swoboda <codetent@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/codetent/yastr"
homepage = "https://github.com/codetent/yastr"
keywords = ["test", "testing", "runner", "pytest", "executable"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Testing",
]
packages = [
    { include = "yastr", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"

anyconfig = {extras = ["template", "yaml"], version = "^0.13.0"}
marshmallow-dataclass = {extras = ["union"], version = "^8.5.3"}
pytest = "^7.1.1"
wrapt = "^1.14.0"

[tool.poetry.dev-dependencies]
yapf = "^0.32.0"
toml = "^0.10.2"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
pyinstaller = "^5.0.1"

[tool.poetry.scripts]
yastr = "yastr:main"

[tool.yapf]
based_on_style = "pep8"
column_limit = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
